@@ -43,7 +43,8 @@ public class MovieServiceTest {
         movieWithFullProps =  new Movie(
                 "81d317b0-29e5-4846-97a6-43c07f3edf4a",
                 "The Godfather",
-                "The aging patriarch of an organized crime dynasty transfers control of his clandestine empire to his reluctant son.",
+                "The aging patriarch of an organized crime dynasty transfers control of " +
+                        "his clandestine empire to his reluctant son.",
                 new ArrayList<String>() {{
                     add("DRAMA");
                 }},
@@ -111,7 +112,8 @@ public class MovieServiceTest {
 
     @Test
     void filterMovies_withMatchingTitle() {
-        List<Movie> filtered = movieService.filterMovies(Collections.emptyList(), "Matrix");
+        List<Movie> filtered = movieService.filterMovies(Collections.emptyList(), "Matrix",
+                Collections.emptyList(), Collections.emptyList());
 
         assertEquals(1, filtered.size());
         assertEquals("The Matrix", filtered.get(0).getTitle());
@@ -119,7 +121,8 @@ public class MovieServiceTest {
 
     @Test
     void filterMovies_withMatchingDescription() {
-        List<Movie> filtered = movieService.filterMovies(Collections.emptyList(), "hacker");
+        List<Movie> filtered = movieService.filterMovies(Collections.emptyList(), "hacker",
+                Collections.emptyList(), Collections.emptyList());
 
         assertEquals(1, filtered.size());
         assertEquals("The Matrix", filtered.get(0).getTitle());
@@ -127,7 +130,8 @@ public class MovieServiceTest {
 
     @Test
     void filterMovies_withPartialMatch() {
-        List<Movie> filtered = movieService.filterMovies(Collections.emptyList(), "Dark");
+        List<Movie> filtered = movieService.filterMovies(Collections.emptyList(), "Dark",
+                Collections.emptyList(), Collections.emptyList());
 
         assertEquals(1, filtered.size());
         assertEquals("The Dark Knight", filtered.get(0).getTitle());
@@ -135,21 +139,24 @@ public class MovieServiceTest {
 
     @Test
     void filterMovies_withNoMatch() {
-        List<Movie> filtered = movieService.filterMovies(Collections.emptyList(), "nonexistant");
+        List<Movie> filtered = movieService.filterMovies(Collections.emptyList(), "nonexistant",
+                Collections.emptyList(), Collections.emptyList());
 
         assertEquals(0, filtered.size());
     }
 
     @Test
     void filterMovies_withEmptyQuery() {
-        List<Movie> filtered = movieService.filterMovies(Collections.emptyList(), "");
+        List<Movie> filtered = movieService.filterMovies(Collections.emptyList(), "",
+                Collections.emptyList(), Collections.emptyList());
 
         assertEquals(5, filtered.size());
     }
 
     @Test
     void filterMovies_withMatchingGenreAndQuery() {
-        List<Movie> filtered = movieService.filterMovies(List.of("SCIENCE_FICTION"), "Matrix");
+        List<Movie> filtered = movieService.filterMovies(List.of("SCIENCE_FICTION"), "Matrix",
+                Collections.emptyList(), Collections.emptyList());
 
         assertEquals(1, filtered.size());
         assertEquals("The Matrix", filtered.get(0).getTitle());
@@ -157,14 +164,16 @@ public class MovieServiceTest {
 
     @Test
     void filterMovies_withNoMatchingGenreAndQuery() {
-        List<Movie> filtered = movieService.filterMovies(List.of("COMEDY"), "Matrix");
+        List<Movie> filtered = movieService.filterMovies(List.of("COMEDY"), "Matrix",
+                Collections.emptyList(), Collections.emptyList());
 
         assertEquals(0, filtered.size());
     }
 
     @Test
     void filterMovies_withMatchingGenreOnly() {
-        List<Movie> filtered = movieService.filterMovies(List.of("SCIENCE_FICTION"), "");
+        List<Movie> filtered = movieService.filterMovies(List.of("SCIENCE_FICTION"), "",
+                Collections.emptyList(), Collections.emptyList());
 
         // In the test data, that should match "Inception" and "The Matrix"
         assertEquals(2, filtered.size());
@@ -174,7 +183,8 @@ public class MovieServiceTest {
 
     @Test
     void filterMovies_withMatchingQueryOnly() {
-        List<Movie> filtered = movieService.filterMovies(Collections.emptyList(), "Matrix");
+        List<Movie> filtered = movieService.filterMovies(Collections.emptyList(), "Matrix",
+                Collections.emptyList(), Collections.emptyList());
 
         assertEquals(1, filtered.size());
         assertEquals("The Matrix", filtered.get(0).getTitle());
@@ -182,14 +192,16 @@ public class MovieServiceTest {
 
     @Test
     void filterMovies_withEmptyGenreAndQuery() {
-        List<Movie> filtered = movieService.filterMovies(Collections.emptyList(), "");
+        List<Movie> filtered = movieService.filterMovies(Collections.emptyList(), "",
+                Collections.emptyList(), Collections.emptyList());
 
         assertEquals(5, filtered.size());
     }
 
     @Test
     void filterMovies_with2Genres() {
-        List<Movie> filtered = movieService.filterMovies(List.of("SCIENCE_FICTION", "ACTION"), "");
+        List<Movie> filtered = movieService.filterMovies(List.of("SCIENCE_FICTION", "ACTION"), "",
+                Collections.emptyList(), Collections.emptyList());
         assertEquals(3, filtered.size());
         assertEquals("Inception", filtered.get(0).getTitle());
         assertEquals("The Dark Knight", filtered.get(1).getTitle());
@@ -198,13 +210,15 @@ public class MovieServiceTest {
 
     @Test
     void filterMovies_withNoMatchingGenreAndEmptyQuery() {
-        List<Movie> filtered = movieService.filterMovies(List.of("ANIMATION"), "");
+        List<Movie> filtered = movieService.filterMovies(List.of("ANIMATION"), "",
+                Collections.emptyList(), Collections.emptyList());
         assertEquals(0, filtered.size());
     }
 
     @Test
     void filterMovies_withNoMatchingGenreAndMatchingQuery() {
-        List<Movie> filtered = movieService.filterMovies(List.of("ANIMATION"), "Matrix"); {
+        List<Movie> filtered = movieService.filterMovies(List.of("ANIMATION"), "Matrix",
+                Collections.emptyList(), Collections.emptyList()); {
             assertEquals(0, filtered.size());
         }
     }
